<resources>
    <string name="app_name">WeatherApp</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="bintang">*</string>
    <string name="masukan_nama_lengkap">Masukan Nama Lengkap</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string name="provinsi">Provinsi</string>
    <string name="masukan_nama_provinsi">Masukan Nama Provinsi</string>
    <string name="masukan_nama_kota">Masukan Nama Kota</string>
    <string name="kota">Kota</string>
    <string name="submit">Submit</string>
    <string name="hallo">Hallo,</string>
    <string name="text">text</string>
    <string name="subtext">subtext</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
</resources>