<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/boxName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/boxPhoneInput">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="start"
                            android:text="@string/nama_lengkap"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="start"
                            android:text="@string/bintang"
                            android:textColor="#FF0000"
                            android:textSize="16sp"
                            tools:ignore="SpUsage" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputNameLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:errorIconDrawable="@drawable/ic_asset_seru"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/boxTitleKtp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:hint="@string/masukan_nama_lengkap"
                            android:inputType="text"
                            android:maxLength="200"
                            android:paddingHorizontal="15dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="14dp"
                            android:textSize="15sp"
                            tools:ignore="SpUsage" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/boxProvince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/boxName">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/boxPhoneInput">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="start"
                            android:text="@string/provinsi"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="start"
                            android:text="@string/bintang"
                            android:textColor="#FF0000"
                            android:textSize="16sp"
                            tools:ignore="SpUsage" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputProvinceLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:errorIconDrawable="@drawable/ic_asset_seru"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/boxTitleKtp">

                        <AutoCompleteTextView
                            android:id="@+id/inputProvince"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:hint="@string/masukan_nama_provinsi"
                            android:inputType="text"
                            android:maxLength="200"
                            android:paddingHorizontal="15dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="14dp"
                            android:textSize="15sp"
                            tools:ignore="SpUsage"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/boxCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/boxProvince">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/boxPhoneInput">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="start"
                            android:text="@string/kota"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="start"
                            android:text="@string/bintang"
                            android:textColor="#FF0000"
                            android:textSize="16sp"
                            tools:ignore="SpUsage" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputCityLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:errorIconDrawable="@drawable/ic_asset_seru"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/boxTitleKtp">

                        <AutoCompleteTextView
                            android:id="@+id/inputCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:hint="@string/masukan_nama_kota"
                            android:inputType="text"
                            android:maxLength="200"
                            android:paddingHorizontal="15dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="14dp"
                            android:textSize="15sp"
                            tools:ignore="SpUsage"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_disable"
            android:selectableItemBackground="@drawable/btn_active"
            android:enabled="false"
            android:fontFamily="@font/roboto_bold"
            android:stateListAnimator="@null"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>